Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberBoolean.quorum
class main
    action Main
        number num = 0.0
        num = cast(number, true)
    end
end